<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/profile_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forename" />

            <EditText
                android:id="@+id/profile_furname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/profile_surname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood" />

            <Button
                android:id="@+id/profile_neiborhood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keys" />

            <Spinner
                android:id="@+id/profile_keys"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <CheckedTextView
                android:id="@+id/profile_hasRightToVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="true"
                android:text="@string/has_right_to_vote" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constituent_slogan" />

            <EditText
                android:id="@+id/profile_slogan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect|textCapSentences|textShortMessage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture" />

            <ImageView
                android:id="@+id/profile_picture_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/profile_picture" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_custom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >
        </LinearLayout>

        <ImageView
            android:id="@+id/org_profile_set_profile_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/submit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/submit"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit_profile_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/submit_new" />
    </LinearLayout>

</ScrollView>