<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_add_org"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/add_org_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_icon" />

            <ImageView
                android:id="@+id/add_org_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/org_icon"
                android:src="@drawable/organization_default_img" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/add_org_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage" />
        </LinearLayout>

        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inst_for_motion" />

            <EditText
                android:id="@+id/add_org_inst_for_motion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inst_for_registration" />

            <EditText
                android:id="@+id/add_org_inst_for_registration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage" />
        </LinearLayout>

        <Button
            android:id="@+id/add_org_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="30dp"
            android:text="Org Setting" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <CheckedTextView
                android:id="@+id/add_org_varied_voting_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:text="@string/varied_voting_right" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_org_max_voting_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_voting_level"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/add_org_max_voting_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:lines="1"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/add_org_new_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="30dp"
            android:text="@string/add_extra" />

        <Button
            android:id="@+id/submit_add_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>