<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <WebView
        android:id="@+id/motion_detail_enhancing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/motion_detail_viewpager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/motion_button_relativelayout"
        android:layout_below="@+id/motion_detail_enhancing"
        android:layout_marginTop="20dp" >
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/motion_button_relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/motion_support"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/support" />

        <Button
            android:id="@+id/motion_against"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/against" />

        <Button
            android:id="@+id/motion_neutral"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/neutral" />
    </RelativeLayout>

</RelativeLayout>