<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/org_name_display_on_org_detail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:columnCount="2"
        android:gravity="center"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_row="0" >

            <ImageView
                android:id="@+id/constituent_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/constituents"
                android:src="@drawable/constituents" />

            <TextView
                android:id="@+id/constituent_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/constituent_img"
                android:layout_centerHorizontal="true"
                android:text="@string/constituents" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_row="0" >

            <ImageView
                android:id="@+id/motion_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/motion"
                android:src="@drawable/motion" />

            <TextView
                android:id="@+id/motion_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/motion_img"
                android:layout_centerHorizontal="true"
                android:text="@string/motion" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_row="1" >

            <ImageView
                android:id="@+id/news_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/news"
                android:src="@drawable/news" />

            <TextView
                android:id="@+id/news_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/news_img"
                android:layout_centerHorizontal="true"
                android:text="@string/news" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_row="1" >

            <ImageView
                android:id="@+id/org_set_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/org_set"
                android:src="@drawable/org_set" />

            <TextView
                android:id="@+id/set_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/org_set_img"
                android:layout_centerHorizontal="true"
                android:text="@string/org_set" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_row="2" >

            <ImageView
                android:id="@+id/org_profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/org_profile"
                android:src="@drawable/org_profile" />

            <TextView
                android:id="@+id/org_profile_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/org_profile_img"
                android:layout_centerHorizontal="true"
                android:text="@string/org_profile" />
        </RelativeLayout>
    </GridLayout>

</LinearLayout>